fix(widget): harden setup app for minSdk 26